# oxygine-framework

./: .gitignore  .hg_archival.txt  .hgignore  .oxbuild  .travis.yml  Android.mk  CMakeLists.txt  Doxyfile  change_log.txt  license.txt  mat2vertex.patch  readme.Android  readme.CMake  readme.MacOSX  readme.Marmalade  readme.SDL2  readme.VisualStudio  readme.iOS  readme.md  ref_event.patch
examples/: CMakeLists.txt
examples/Demo/: .oxbuild  CMakeLists.txt  build_atlasses.bat  build_atlasses.sh  build_atlasses_etc2.bat  build_atlasses_low.bat  build_atlasses_pvrtc.bat  build_atlasses_pvrtc_high_quality.sh  demo_src.mkb  gen_xml_resources.py  later.patch  prepare_res.bat  prepare_res.sh  prepare_res_etc1.bat  prepare_res_low.bat  prepare_res_pvrtc.bat  prepare_res_pvrtc.sh  prepare_res_pvrtc_high_quality.sh
examples/Demo/data/: development.icf  light_fs.glsl  light_vs.glsl  pp_blit_fs.glsl  pp_blit_vs.glsl  pp_hblur_vs.glsl  pp_rast_fs.glsl  pp_vblur_vs.glsl
examples/Demo/flash/: AGAL.abc  Console.as
examples/Demo/proj.android/: AndroidManifest.xml  build-run.bat  build-run.sh  build.bat  build.cmd  build.gradle  build.xml  install.bat  install.sh  local.properties
examples/Demo/proj.cmake/: CMakeLists.txt  build_emsc.bat  build_emsc_release.bat  run.sh
examples/Demo/proj.emscripten/: CMakeLists.txt
examples/Demo/proj.flash/: AGAL.h  AGAL_internal.h  Console.abc  Makefile  Makefile.common  exports.txt  fcc_sscanf.c  fcc_sscanf.h  index.html
examples/Demo/proj.marmalade/: AndroidManifest.xml  demo.mkb
examples/Demo/proj.win32/: Demo.sln  Demo.vcxproj  Demo.vcxproj.filters  Demo_vs2010.sln  Demo_vs2010.vcxproj  Demo_vs2013.sln  Demo_vs2013.vcxproj  Demo_vs2013.vcxproj.filters
examples/Demo/src/: Counter.cpp  Counter.h  TestAlphaHitTest.h  TestBox9Sprite.h  TestCamera.h  TestClipRect.h  TestColorFont.h  TestComplexDrag.h  TestCounter.h  TestDrag.h  TestEdges.h  TestHttp.h  TestInputText.h  TestManageRes.h  TestMask.h  TestOpenGL.h  TestPerf.h  TestPolygon.h  TestProgressBar.h  TestRender2Texture.h  TestSignedDistanceFont.h  TestSliding.h  TestTexel2Pixel.h  TestText.h  TestTextureFormat.h  TestTiled.h  TestTouches.h  TestTweenAlphaFade.h  TestTweenGlow.h  TestTweenPostProcessing.h  TestTweenShine.h  TestTweenText.h  TestTweens.h  TestUserShader.h  TestUserShader2.h  entry_point.cpp  example.cpp  main.cpp  test.cpp  test.h
examples/Demo/win32/: Demo_vs2010.sln  HelloWorld_vs2010.vcxproj  HelloWorld_vs2010.vcxproj.filters
examples/DemoBox2D/: .oxbuild  Box2D.mkb  CMakeLists.txt
examples/DemoBox2D/box2d/: README  box2d.mkb  box2d.mkf  box2d_library.mkf  box2d_vs2010.sln  box2d_vs2010.vcxproj  box2d_vs2010.vcxproj.filters
examples/DemoBox2D/data/: app.icf  res.xml
examples/DemoBox2D/proj.android/: AndroidManifest.xml  build-run.bat  build-run.sh  build.gradle  build.sh  build.xml  install.bat  install.sh  settings.gradle
examples/DemoBox2D/proj.cmake/: CMakeLists.txt  build_emsc_release.bat  run.sh
examples/DemoBox2D/proj.emscripten/: CMakeLists.txt  build_release.bat
examples/DemoBox2D/proj.marmalade/: DemoBox2D.mkb
examples/DemoBox2D/proj.win32/: DemoBox2D.sln  DemoBox2D.vcxproj  DemoBox2D.vcxproj.filters  DemoBox2D_vs2010.sln  DemoBox2D_vs2010.vcxproj  DemoBox2D_vs2010.vcxproj.filters  DemoBox2D_vs2013.sln  DemoBox2D_vs2013.vcxproj  DemoBox2D_vs2013.vcxproj.filters
examples/DemoBox2D/src/: Box2DDebugDraw.cpp  Box2DDebugDraw.h  entry_point.cpp  example.cpp  example.h
examples/Game/: CMakeLists.txt  readme.txt
examples/Game/part1/: game.mkb
examples/Game/part5/: gen-atlasses-android(ETC1).bat  gen-atlasses-android(ETC1).sh  gen-atlasses-ios(PVRTC).bat  gen-atlasses-ios(PVRTC).sh  gen-atlasses-low-definition.bat  gen-atlasses-low-definition.sh  gen-atlasses.bat  gen-atlasses.sh
examples/GameTemplate/: .oxbuild  CMakeLists.txt  GameTemplate.mkb  prepare_res.bat  readme.txt
examples/GameTemplate/data/: development.icf  strings_en_GB.xml  strings_ru_RU.xml
examples/GameTemplate/src/: GameActor.cpp  GameActor.h  GameMenu.cpp  GameMenu.h  GameResult.cpp  GameResult.h  MainMenu.cpp  MainMenu.h  Modal.cpp  Modal.h  ModalActor.cpp  ModalActor.h  Options.cpp  Options.h  OptionsMenu.cpp  OptionsMenu.h  entry_point.cpp  example.cpp  shared.cpp  shared.h
examples/HelloWorld/: .oxbuild  CMakeLists.txt  HelloWorld_src.mkb
examples/HelloWorld/data/: data.js  development.icf  pack.py  res.xml
examples/HelloWorld/proj.android/: AndroidManifest.xml  build-run.bat  build-run.sh  build.cmd  build.gradle  build.xml  install.bat  install.sh  project.properties
examples/HelloWorld/proj.cmake/: CMakeLists.txt  build_emsc.bat  run.sh
examples/HelloWorld/proj.emscripten/: CMakeLists.txt  build_release.bat
examples/HelloWorld/proj.marmalade/: HelloWorld.mkb
examples/HelloWorld/proj.win32/: HelloWorld.sln  HelloWorld.vcxproj  HelloWorld_vs2010.sln  HelloWorld_vs2010.vcxproj  HelloWorld_vs2013.sln  HelloWorld_vs2013.vcxproj
examples/HelloWorld/src/: entry_point.cpp  example.cpp  example.h  main.cpp
examples/Match3/: .oxbuild  CMakeLists.txt  credits.txt  match3_src.mkb
examples/Match3/data/: development.icf  resources.xml
examples/Match3/proj.android/: AndroidManifest.xml  ant_debug.bat  ant_debug.sh  build-run.bat  build-run.sh  build.sh  build.xml  install.bat  install.sh  project.properties
examples/Match3/proj.cmake/: CMakeLists.txt  build_emsc.bat  build_emsc_release.bat  run.sh
examples/Match3/proj.emscripten/: CMakeLists.txt  build.bat  build_release.bat
examples/Match3/proj.win32/: Match3.sln  Match3.vcxproj  Match3_vs2010.sln  Match3_vs2010.vcxproj  Match3_vs2013.sln  Match3_vs2013.vcxproj
examples/Match3/src/: Board.cpp  Board.h  Jewel.cpp  Jewel.h  entry_point.cpp  example.cpp  example.h  gameframe.cpp  gameframe.h  jewels.cpp  jewels.h  main.cpp  shared.cpp  shared.h
examples/TutorialResources/: CMakeLists.txt
examples/TutorialResources/data/: animals.xml  app.icf  development.icf
examples/TutorialResources/proj.android/: AndroidManifest.xml  ant.properties  build-run.sh  build.xml  install.bat  install.sh
(+1243 files in other folders)
